# pylibrary

./: .gitignore  LICENSE  MANIFEST.in  README.md  _version.py  pyproject.toml  upload.bat
.forgejo/workflows/: python-publish.yml
.github/workflows/: python-publish.yml
lokzzpylib/: __init__.py  misc.py
