[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lokzz-pylibrary"
dynamic = ["version"]
authors = [
    { name="lokzz", email="lokzz@github.com" },
]
description = "personal library"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10.7"
dependencies = [
    "clint",
    "pick",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = {attr = "lokzz--pylibrary.VERSION"}